# opennet

./: Cargo.toml  README.md
Opennet Assets/: print.eps  print_transparent.eps
bins/opennet-cli/: Cargo.toml  README.md
bins/opennet-cli/src/: main.rs  output.rs
bins/opennet-cli/src/commands/: debug.rs  identity.rs  mod.rs  peer.rs  resolve.rs  trust.rs
bins/opennet-daemon/: Cargo.toml  README.md
bins/opennet-daemon/src/: cli.rs  config.rs  logging.rs  main.rs  metrics.rs  signals.rs
crates/opennet-core/: Cargo.toml  README.md
crates/opennet-core/docs/: RFC.md
crates/opennet-core/src/: constants.rs  epoch.rs  error.rs  lib.rs  node_id.rs  scope.rs  service_id.rs  uri.rs
crates/opennet-core/src/types/: hash.rs  mod.rs  public_key.rs  signature.rs  timestamp.rs
crates/opennet-identity/: Cargo.toml  README.md
crates/opennet-identity/src/: announcement.rs  compromise.rs  error.rs  keypair.rs  lib.rs  node_identity.rs  storage.rs  watcher.rs
crates/opennet-identity/src/rotation/: chain.rs  mod.rs  request.rs  validation.rs
crates/opennet-node/: Cargo.toml  README.md
crates/opennet-node/docs/: RFC-behavior.md  RFC.md
crates/opennet-node/src/: config.rs  error.rs  lib.rs
crates/opennet-node/src/events/: mod.rs  priority.rs  producer.rs  queue.rs
crates/opennet-node/src/fsm/: event.rs  invariants.rs  mod.rs  state.rs  table.rs  transition.rs
crates/opennet-node/src/integration/: mod.rs  pipeline.rs  resolver.rs  transport.rs  trust.rs
crates/opennet-node/src/peer/: discovery.rs  exchange.rs  manager.rs  mod.rs
crates/opennet-node/src/states/: active.rs  bootstrap.rs  degraded.rs  mod.rs  quarantined.rs  syncing.rs
crates/opennet-node/src/sync/: epoch_sync.rs  mod.rs  revocation_sync.rs  trust_sync.rs
crates/opennet-resolver/: Cargo.toml  README.md
crates/opennet-resolver/docs/: RFC-fsm-transport.md
crates/opennet-resolver/src/: error.rs  lib.rs
crates/opennet-resolver/src/candidates/: mod.rs  node_descriptor.rs  set.rs
crates/opennet-resolver/src/daemon/: cache.rs  mod.rs  service.rs
crates/opennet-resolver/src/daemon/ipc/: mod.rs  protocol.rs  unix.rs  windows.rs
crates/opennet-resolver/src/ranking/: affinity.rs  diversity.rs  mod.rs  score.rs  tiebreaker.rs
crates/opennet-resolver/src/resolution/: mod.rs  parser.rs  query.rs  result.rs
crates/opennet-resolver/src/scope/: fallback.rs  filter.rs  mod.rs
crates/opennet-revocation/: Cargo.toml  README.md
crates/opennet-revocation/src/: error.rs  lib.rs  listener.rs
crates/opennet-revocation/src/quorum/: mod.rs  validator.rs  weight.rs
crates/opennet-revocation/src/recovery/: attestation.rs  mod.rs  process.rs  request.rs
crates/opennet-revocation/src/revocation/: mod.rs  object.rs  propagation.rs  trigger.rs  validation.rs
crates/opennet-tests/: Cargo.toml  README.md
crates/opennet-tests/docs/: RFC-fsm-tests.md
crates/opennet-tests/src/: lib.rs
crates/opennet-tests/src/compliance/: crypto.rs  fsm.rs  mod.rs  resolver.rs  trust.rs  wire.rs
crates/opennet-tests/src/determinism/: comparison.rs  mod.rs  replay.rs
crates/opennet-tests/src/golden/: fixtures.rs  harness.rs  mod.rs
crates/opennet-tests/src/helpers/: mock_network.rs  mock_time.rs  mod.rs  test_node.rs
crates/opennet-tests/src/integration/: mod.rs  multi_node.rs  pipeline.rs  single_node.rs
crates/opennet-tests/src/stress/: adversarial.rs  burst.rs  mod.rs
crates/opennet-tests/src/vectors/: format.rs  loader.rs  mod.rs  result.rs
crates/opennet-time/: Cargo.toml  README.md
crates/opennet-time/docs/: RFC.md
crates/opennet-time/src/: clock.rs  error.rs  lib.rs  monitor.rs
crates/opennet-time/src/drift/: detector.rs  mod.rs  tolerance.rs
crates/opennet-time/src/epoch/: expiry.rs  mod.rs  transition.rs  validity.rs
crates/opennet-time/src/nmt/: calculator.rs  mod.rs  outlier.rs  sampler.rs
crates/opennet-time/src/replay/: mod.rs  nonce.rs  window.rs
crates/opennet-transport/: Cargo.toml  README.md
crates/opennet-transport/docs/: RFC.md
crates/opennet-transport/src/: backpressure.rs  error.rs  lib.rs
crates/opennet-transport/src/admission/: control.rs  mod.rs  threshold.rs
crates/opennet-transport/src/handshake/: initiator.rs  mod.rs  responder.rs  verification.rs
crates/opennet-transport/src/quic/: client.rs  config.rs  connection.rs  mod.rs  server.rs  stream.rs
crates/opennet-transport/src/session/: binding.rs  lifecycle.rs  manager.rs  mod.rs
crates/opennet-transport/src/tcp/: client.rs  connection.rs  mod.rs  server.rs
crates/opennet-trust/: Cargo.toml  README.md
crates/opennet-trust/src/: error.rs  evaluator.rs  lib.rs
crates/opennet-trust/src/decay/: exponential.rs  mod.rs  parameters.rs
crates/opennet-trust/src/events/: mod.rs  negative.rs  positive.rs
crates/opennet-trust/src/graph/: edge.rs  mod.rs  node.rs  snapshot.rs  storage.rs
crates/opennet-trust/src/sybil/: mod.rs  resistance.rs
crates/opennet-trust/src/thresholds/: connect.rs  mod.rs  relay.rs  resolve.rs
crates/opennet-trust/src/weight/: calculation.rs  fixed_point.rs  mod.rs  propagation.rs
crates/opennet-wire/: Cargo.toml  README.md
crates/opennet-wire/docs/: RFC.md
crates/opennet-wire/src/: error.rs  lib.rs  validation.rs
crates/opennet-wire/src/cbor/: canonical.rs  decoder.rs  encoder.rs  keys.rs  mod.rs
crates/opennet-wire/src/frame/: header.rs  mod.rs  payload.rs  signature.rs
crates/opennet-wire/src/messages/: mod.rs  node_hello.rs  node_welcome.rs  revocation.rs  service_join.rs  service_leave.rs  stream_close.rs  stream_data.rs  stream_open.rs
crates/opennet-wire/src/tlv/: frame.rs  mod.rs  reader.rs  types.rs  writer.rs
docs/: OpenNet_Rust_Project_Structure.md  governance.md  ietf-submission.md
specs/: README.md  rfc-companion.md  rfc-compliance-vectors.md  rfc-fsm-event-binding.md  rfc-identity-lifecycle.md  rfc-implementation-deployment.md  rfc-interoperability.md  rfc-resolver-daemon.md  rfc-revocation-recovery.md  rfc-rust-freeze-plan.md  rfc-rust-reference-node.md  rfc-trust-dynamics.md  rfc-wire-low-level.md
