[package]
name = "opennet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenNet CLI tools"

[[bin]]
name = "opennet"
path = "src/main.rs"

[dependencies]
opennet-core.workspace = true
opennet-resolver.workspace = true
opennet-trust.workspace = true
tokio.workspace = true
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
anyhow.workspace = true
