[package]
name = "opennet-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenNet full node daemon"

[[bin]]
name = "opennet-daemon"
path = "src/main.rs"

[dependencies]
opennet-node.workspace = true
opennet-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde.workspace = true
anyhow.workspace = true
