[package]
name = "opennet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for OpenNet protocol"

# RFC: OpenNet Core Protocol

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
serde.workspace = true
thiserror.workspace = true
fixed.workspace = true
hex = "0.4"

[dev-dependencies]
proptest.workspace = true
