[package]
name = "opennet-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Identity lifecycle management for OpenNet"

# RFC: Identity Lifecycle RFC

[dependencies]
opennet-core.workspace = true
opennet-wire.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
thiserror.workspace = true
zeroize = "1.7"                   # Secure memory clearing

[dev-dependencies]
proptest.workspace = true
tempfile = "3.9"
