[package]
name = "opennet-trust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trust graph and weight dynamics for OpenNet"

# RFC: Trust Weight Dynamics RFC

[dependencies]
opennet-core.workspace = true
fixed.workspace = true
num-traits.workspace = true
indexmap.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "trust_calculation"
harness = false
