[package]
name = "opennet-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire format encoding for OpenNet (CBOR/TLV)"

# RFC: CBOR & TLV Schemas RFC

[dependencies]
opennet-core.workspace = true
ciborium.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
hex = "0.4"
